--- a/src/sass/layout/_checkout.scss
+++ b/src/sass/layout/_checkout.scss
@@ -463,6 +463,16 @@
       background-size: cover;
       z-index: 1;
     }
+
+    a {
+      color: $main-color;
+      border-bottom: 1px solid transparent;
+      transition: border-color .3s;
+
+      &:hover {
+        border-color: $main-color;
+      }
+    }
   }
 
   &__contacts {
