feature: adds remarks

--- a/src/components/seo-msk.html
+++ b/src/components/seo-msk.html
@@ -37,9 +37,7 @@
               </div>
             </div>
             <p>Покупал телефон подружке на день рождения, так что как он себя ведёт особо не знаю, но судя по всему
-              всё красиво. Заказ оформили за считаные минуты, и доставка не заставила ждать, телефон привезли за 4
-              часа. При проверке телефон выглядел отлично, и IMEI сошёлся. Ну вроде не жалуется, так что телефон
-              нормальный.</p>
+              всё красиво.</p>
           </div>
 
           <div class="seo-msk__review swiper-slide">
