feature : comments script opent reuslt search and adds style for ruble-sign

--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -447,3 +447,8 @@ select {
 .question-mark {
   font-family: 'Roboto';
 }
+
+/* Смена шрифта для знака рубля (не отображается на iphone) */
+.ruble-sign {
+  font-family: 'FuturaPT';
+}
