fix: changes style for credit popup

--- a/src/sass/layout/_popup.scss
+++ b/src/sass/layout/_popup.scss
@@ -697,7 +697,7 @@
 
         span {
           &:first-of-type {
-            font: 500 48px/56px Roboto;
+            font: 500 48px/56px FuturaPT;
             color: $main-color;
           }
 
