--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -291,6 +291,8 @@ button {
     pointer-events: inherit;
     opacity: 1;
     z-index: 100;
+    height: auto;
+    min-height: 30px;
   }
 
   &-mobile {
@@ -468,5 +470,5 @@ select {
 
 .mfp-wrap {
   -webkit-overflow-scrolling: touch;
-  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
 }
