fix: changes styles for select city on menu mobile

--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -98,7 +98,7 @@
 
 	&__select-city {
 		position: relative;
-		padding: 13px 15px;
+		padding: 13px 15px 35px;
 
 		&::after {
 			content: "";
@@ -120,7 +120,9 @@
 			color: $second-black-color-opacity-5;
 
 			&:last-of-type {
-				color: $main-color;
+				a {
+					color: $main-color;
+				}
 			}
 		}
 	}
