--- a/src/components/header.html
+++ b/src/components/header.html
@@ -807,11 +807,13 @@
               </div>
 
               <div class="menu__footer uk-flex">
-                <a href="#" class="menu__select-city uk-flex uk-flex-column uk-width-expand"
+                <div class="menu__select-city uk-flex uk-flex-column uk-width-expand"
                   data-uk-toggle="target: #popupSelectCity">
                   <span>Ваш город:</span>
-                  <span>Санкт-Петeрбург</span>
-                </a>
+                  <span>
+                    <a href="#" class="prmn-cmngr__city">Санкт-Петeрбург</a>
+                  </span>
+                </div>
                 <ul class="menu__socials uk-flex uk-width-1-3 uk-child-width-1-2">
                   <li>
                     <a href="#">
