--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -472,3 +472,13 @@ select {
   -webkit-overflow-scrolling: touch;
   transform: translateZ(0);
 }
+
+/* menu mobile выбор города */
+.prmn-cmngr__city {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 35px 15px 0;
+}
