feature: adds info for section contacts-persona-data

--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -297,5 +297,15 @@
 
   &__personal-data {
     padding: 20px 30px;
+
+    a {
+      color: $main-color;
+      border-bottom: 1px solid transparent;
+      transition: border-color .3s;
+
+      &:hover {
+        border-color: $main-color;
+      }
+    }
   }
 }
