feature: adds script to mask for number

--- a/src/components/subscribe.html
+++ b/src/components/subscribe.html
@@ -6,7 +6,7 @@
       <p>Получите скидку до 10% на первую покупку <br>за подписку на рассылку.</p>
       <div class="field uk-margin-bottom">
         <span class="field__title">Введите свой телефон:</span>
-        <input type="text" placeholder="+7">
+        <input class="maskForNumber" type="text" placeholder="+7">
       </div>
       <button type="button" class="btn">Перезвоните мне</button>
     </div>
