feature: eddits scripts

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -644,7 +644,7 @@
             минут</span>
           <div class="field field--account uk-margin-bottom">
             <label for="" class="field__title popup__subtitle">Телефон</label>
-            <input type="text">
+            <input class="maskForNumber" type="text">
           </div>
           <button type="button" class="btn" data-uk-toggle="target: #popupThanks">Отправить заявку</button>
           <button class="btn btn--green uk-margin-small-top" type="button"
