--- a/src/sass/utilities/_variables.scss
+++ b/src/sass/utilities/_variables.scss
@@ -118,6 +118,8 @@ $green-5: rgba(75, 217, 100, 1);
 $orange: rgba(255, 121, 20, 1);
 $orange-2: rgba(255, 150, 0, 1);
 $blue: rgba(0, 149, 255, 1);
+$pink-light: rgba(254, 237, 228, 1);
+$red-light: rgba(202, 54, 70, 1);
 
 $gradient-pink: linear-gradient(250.77deg, rgba(237, 101, 108, 1) 0%, rgba(223, 92, 145, 1) 99.52%);
 $gradient-pink-2: linear-gradient(360deg, rgba(241, 49, 103, 1) 0%, rgba(247, 149, 201, 1) 99.86%);
