feature: adds styles

--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -488,3 +488,12 @@ select {
   left: 0;
   padding: 35px 15px 0;
 }
+
+/* стили для текста про карантин */
+.quarantine {
+  text-align: center;
+  color: #fe4792;
+  padding-top: 20px;
+  text-decoration: underline;
+  margin: auto;
+}
