--- a/src/sass/layout/_product.scss
+++ b/src/sass/layout/_product.scss
@@ -119,7 +119,11 @@
     }
 
     &-footer {
-      padding: 20px 160px 0 40px;
+      padding: 20px 0 40px;
+
+      @include screen(l) {
+        justify-content: flex-start;
+      }
     }
   }
 
@@ -462,7 +466,7 @@
       }
     }
 
-    input:checked+label {
+    input:checked + label {
       border: 1px solid $main-color;
       box-shadow: 0px 2px 8px $black-opacity-1;
       border-radius: 10px;
@@ -621,14 +625,12 @@
   &__points {
     display: inline-block;
     padding: 8px 15px 10px;
-    width: 100%;
     text-align: center;
     border-radius: 8px;
     font: 600 16px/22px FuturaPT;
     background: $white;
-
     cursor: pointer;
-    white-space: nowrap;
+
 
     @include screen(xl) {
       color: $second-color;
@@ -636,11 +638,12 @@
 
 
     @include screen(l) {
+      align-items: flex-start;
       align-self: flex-start;
-      margin-left: 40px;
-      max-width: 244px;
+      width: max-content;
       color: $main-color;
       border: 1px solid $main-color;
+      white-space: nowrap;
     }
   }
 
@@ -1045,17 +1048,22 @@
   }
 
   &__was-sold {
-    span {
-      &:first-of-type {
-        text-transform: uppercase;
-        font: 500 12px/20px FuturaPT;
-        color: $main-black-color-opacity-5;
-      }
-
-      &:last-of-type {
-        font: 500 16px/21px FuturaPT;
-        color: $main-color;
-      }
+    @include screen(l) {
+      width: 53%;
+      padding-left: 40px;
     }
+
+    //span {
+    //  &:first-of-type {
+    //    text-transform: uppercase;
+    //    font: 500 12px/20px FuturaPT;
+    //    color: $main-black-color-opacity-5;
+    //  }
+    //
+    //  &:last-of-type {
+    //    font: 500 16px/21px FuturaPT;
+    //    color: $main-color;
+    //  }
+    //}
   }
 }
